--- a/cakepage.html
+++ b/cakepage.html
@@ -86,7 +86,7 @@
         <div class="whatsNew" id="watsNew" >
             <div class="cake">
                 <a id="cakeNamed" href="" style="text-decoration: none; color: white;">
-                    <h3 id="cakeType1">Mango Bravo</h3>
+                    <h3 id="cakeType1">Mango Bravo Round Cake</h3>
                 </a>
                 <a class="imageCake" id="gotoCart">
                     
@@ -96,7 +96,7 @@
             </div>
             <div class="cake">
                 <a id="cakeNamed" href="" style="text-decoration: none; color: white;">
-                <h3 id="cakeType2">Chifon Cake</h3></a>
+                <h3 id="cakeType2">Chifon Cake Round Cake</h3></a>
                 <a class="imageCake">
                     <img class="bannerImg2" src="./cake/Round Cake/Chifon.jpg" alt="">
                 </a>
@@ -173,7 +173,7 @@
             </div>
     
             <div class="cake">
-                <h3 id="cakeType16">Alcapone</h3>
+                <h3 id="cakeType16">Alcapone Doughnut</h3>
                 <img class="bannerImg16" src="./cake/Sweet Bites/Doughnuts/Alcapone.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
@@ -215,56 +215,56 @@
         </div>
         <div class="roundCakes" id="roundCake">
             <div class="cake">
-                <h3 id="ck">Mango Bravo</h3>
+                <h3 id="ck">Mango Bravo Round Cake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="round" src="./cake/Round Cake/Mango Bravo.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Chocolate</h3>
+                <h3 id="ck">Chocolate Round Cake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="round" src="./cake/Round Cake/Chocolate.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Chifon de Leche</h3>
+                <h3 id="ck">Chifon de Leche Round Cake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="round" src="./cake/Round Cake/Chifon.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Mango</h3>
+                <h3 id="ck">Mango Round Cake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="round" src="./cake/Round Cake/Mango.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Mocha</h3>
+                <h3 id="ck">Mocha Round Cake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="round" src="./cake/Round Cake/Mocha.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Sans Rival</h3>
+                <h3 id="ck">Sans Rival Round Cake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="round" src="./cake/Round Cake/Sans rival.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Ube Macapunio</h3>
+                <h3 id="ck">Ube Macapunio Round Cake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="round" src="./cake/Round Cake/Ube Macapunio.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck">Ube Yema</h3>
+                <h3 id="ck">Ube Yema Round Cake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="round" src="./cake/Round Cake/Ube Yema.jpg" alt="">
                 </a>
@@ -273,21 +273,21 @@
         </div> 
         <div class="rollCakes" id="rollCake">
             <div class="cake">
-                <h3 id="ck1">Brazo de Mercedez</h3>
+                <h3 id="ck1">Brazo de Mercedez Roll</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="roll" src="./cake/Roll Cakes/Brazo de Mercedez.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck1">Mocha</h3>
+                <h3 id="ck1">Mocha Roll</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="roll" src="./cake/Roll Cakes/Mocha.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck1">Ube</h3>
+                <h3 id="ck1">Ube Roll</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="roll" src="./cake/Roll Cakes/Ube.jpg" alt="">
                 </a>
@@ -296,28 +296,28 @@
         </div>
         <div class="dreamCake" id="dcCake">
             <div class="cake">
-                <h3 id="ck2">Chocolate</h3>
+                <h3 id="ck2">Chocolate Dreamcake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="dr" src="./cake/Dream Cake/Chocolate.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck2">Mango</h3>
+                <h3 id="ck2">Mango Dreamcake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="dr" src="./cake/Dream Cake/Mango.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck2">Mocha</h3>
+                <h3 id="ck2">Mocha Dreamcake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="dr" src="./cake/Dream Cake/Mocha.JPG" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck2">Ube</h3>
+                <h3 id="ck2">Ube Dreamcake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="dr" src="./cake/Dream Cake/Ube.jpg" alt="">
                 </a>
@@ -340,42 +340,42 @@
         </div>
         <div class="cupCake" id="cupCake">
             <div class="cake">
-                <h3 id="ck3">Chocolate</h3>
+                <h3 id="ck3">Chocolate Cupcake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="cup" src="./cake/Cupcake/Chocolate.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck3">Coffee</h3>
+                <h3 id="ck3">Coffee Cupcake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="cup" src="./cake/Cupcake/Coffee.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck3">Mango</h3>
+                <h3 id="ck3">Mango Cupcake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="cup" src="./cake/Cupcake/Mango.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck3">Mocha</h3>
+                <h3 id="ck3">Mocha Cupcake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="cup" src="./cake/Cupcake/Mocha.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck3">Ube</h3>
+                <h3 id="ck3">Ube Cupcake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="cup" src="./cake/Cupcake/Ube.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
-                <h3 id="ck3">Vanilla</h3>
+                <h3 id="ck3">Vanilla Cupcake</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="cup" src="./cake/Cupcake/Vanilla.jpg" alt="">
                 </a>
@@ -384,7 +384,7 @@
         </div>
         <div class="sweetBites" id="sweetBts">
             <div class="cake">
-                <h3 id="ck4">Alcapone</h3>
+                <h3 id="ck4">Alcapone Doughnut</h3>
                 <a class="imageCake" id="gotoCart">
                     <img id="sweet" src="./cake/Sweet Bites/Doughnuts/Alcapone.jpg" alt="">
                 </a>
