--- a/index.html
+++ b/index.html
@@ -142,16 +142,52 @@
     <div class="container3" >
         <div class="bGround one" id="cont3"></div>
         <div  class="cardContainer" id="about">
-            <h1 >About Chosen 1</h1>
-            <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Consequuntur incidunt facere repellat accusantium animi sunt consequatur suscipit dolores tenetur repudiandae! 
-                Sint, tempore, harum eius est impedit magnam corporis ipsum quod ullam eaque aperiam nostrum ipsa iste sit qui ipsam. 
-                Impedit deserunt culpa aliquid molestiae 
-                ipsam quibusdam nobis architecto ipsa sapiente!.Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Consequuntur incidunt facere repellat accusantium animi sunt consequatur suscipit dolores tenetur repudiandae! 
-                    Sint, tempore, harum eius est impedit magnam corporis ipsum quod ullam eaque aperiam nostrum ipsa iste sit qui ipsam. 
-                    Impedit deserunt culpa aliquid molestiae 
-                    ipsam quibusdam nobis architecto ipsa sapiente!.</p>
+            <div class="slider">
+                <div class="slides">
+                  <!--radio buttons start-->
+                  <input type="radio" name="radio-btn" id="radio1">
+                  <input type="radio" name="radio-btn" id="radio2">
+                  <input type="radio" name="radio-btn" id="radio3">
+                  <input type="radio" name="radio-btn" id="radio4">
+                  <input type="radio" name="radio-btn" id="radio5">
+                  <!--radio buttons end-->
+                  <!--slide images start-->
+                  <div class="slide first">
+                    <img src="./Slideshow/1.jpg" alt="">
+                  </div>
+                  <div class="slide">
+                    <img src="./Slideshow/2.jpg" alt="">
+                  </div>
+                  <div class="slide">
+                    <img src="./Slideshow/3.jpg" alt="">
+                  </div>
+                  <div class="slide">
+                    <img src="./Slideshow/4.jpg" alt="">
+                  </div>
+                  <div class="slide">
+                    <img src="./Slideshow/5.jpg" alt="">
+                  </div>
+                  <!--slide images end-->
+                  <!--automatic navigation start-->
+                  <div class="navigation-auto">
+                    <div class="auto-btn1"></div>
+                    <div class="auto-btn2"></div>
+                    <div class="auto-btn3"></div>
+                    <div class="auto-btn4"></div>
+                    <div class="auto-btn5"></div>
+                  </div>
+                  <!--automatic navigation end-->
+                </div>
+                <!--manual navigation start-->
+                <div class="navigation-manual">
+                  <label for="radio1" class="manual-btn"></label>
+                  <label for="radio2" class="manual-btn"></label>
+                  <label for="radio3" class="manual-btn"></label>
+                  <label for="radio4" class="manual-btn"></label>
+                  <label for="radio5" class="manual-btn"></label>
+                </div>
+                <!--manual navigation end-->
+              </div>
         </div>
         <div class="bGround two"></div>
        
