--- a/cart.html
+++ b/cart.html
@@ -51,7 +51,7 @@
                 <div class="orderForm">
                     <input id="price" type="tel" disabled placeholder="0" value="0">
                     <button id="minus" class="fas fa-minus"></button><input type="text" id="num" disabled value="0"><button id="add" class="fas fa-plus"></button>
-                    <input placeholder="Set the date when do you want to deliver" class="textbox-n" type="text" onfocus="(this.type='date')" id="date" value="">
+                    <input placeholder="Set the date when do you want to deliver" value=" " type="text" onfocus="(this.type='date')" id="date" >
                     
                     <button id="rsv">Reserve Now</button>
                     
