--- a/cart.html
+++ b/cart.html
@@ -63,6 +63,7 @@
     
     <script src="cart.js">
     </script>
+     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     
 </body>
 </html>
