--- a/index.html
+++ b/index.html
@@ -203,5 +203,6 @@
     </div>
 
     <script src="main.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
