--- a/cart.html
+++ b/cart.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./cart.css">
     <link rel="icon" href="./logo/logo.png">
     <link rel="stylesheet" href="./fontawesome/css/all.css">
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
 </head>
 <body>
     <!-- navigations -->
@@ -51,7 +52,7 @@
                 <div class="orderForm">
                     <input id="price" type="tel" disabled placeholder="0" value="0">
                     <button id="minus" class="fas fa-minus"></button><input type="text" id="num" disabled value="0"><button id="add" class="fas fa-plus"></button>
-                    <input value="Set your delivery date!" type="text" onfocus="(this.type='date')" id="date">
+                    <input value="Set your delivery date!" type="text" onfocus="(this.type='date')"  id="date">
                     
                     <button id="rsv">Reserve Now</button>
                     
