--- a/cakepage.html
+++ b/cakepage.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="logo/logo.png">
     <link rel="stylesheet" href="cakepage.css">
     <link rel="stylesheet" href="/fontawesome/css/all.css">
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
 </head>
 <body>
     <div class="contactus" id="cnt">
