--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <h1> CONTACT US </h1>
             <p>Please fill up the form.</p> 
         </div>
-        <form action="">
+        <div class="form">
             <h3>Full Name</h3>
-            <input type="text">
+            <input type="text" id="fname" value=" ">
             <h3>Email</h3>
-            <input type="email" name="" id="">
+            <input type="email" id="em" value=" ">
             <h3>Message</h3>
-            <textarea rows="4" cols="100" name="comment"></textarea>
-            <input type="button" value="Submit">
-        </form>
+            <textarea rows="4" cols="100" name="comment" value=" " id="cmt"></textarea>
+        </div>
+        <button id="sub">Submit</button>
         <div class="scrollToTop" id="scrtop"></div>
     </div>
    
