--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     </div>
    
     <nav id="navbar">
-           
             <div class="logo">
                 <img src="logo/logo.png" alt="">
                 <div class="name">
@@ -45,7 +44,7 @@
                     <a id="texts" href="cakepage.html"><h4>OUR CAKES</h4></a>
                 </li>
                 <li >
-                    <div id="texts1"><h4>ABOUT US</h4></div>
+                    <div id="texts1"><h4>CUSTOMIZE CAKES</h4></div>
                 </li>
             </ul>
             <div class="burger">
@@ -197,7 +196,7 @@
             <button id="oc">Our Cakes</button>
             <button id="order">Order Now</button>
             <button id="contact">Contact Us</button>
-            <p>©Copyright <a href="./main.html"> <b>Chosen 1 Bakeshop.</b> </a>All Rights Reserved.</p>
+            <p>©Copyright <a href="./index.html"> <b>Chosen 1 Bakeshop.</b> </a>All Rights Reserved.</p>
     
         </footer>
     </div>
