--- a/cakepage.html
+++ b/cakepage.html
@@ -299,42 +299,42 @@
             <div class="cake">
                 <h3 id="ck2">Chocolate Dreamcake</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img id="dr" src="./cake/Dream Cake/Chocolate.jpg" alt="">
+                    <img id="dream" src="./cake/Dream Cake/Chocolate.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
                 <h3 id="ck2">Mango Dreamcake</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img id="dr" src="./cake/Dream Cake/Mango.jpg" alt="">
+                    <img id="dream" src="./cake/Dream Cake/Mango.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
                 <h3 id="ck2">Mocha Dreamcake</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img id="dr" src="./cake/Dream Cake/Mocha.JPG" alt="">
+                    <img id="dream" src="./cake/Dream Cake/Mocha.JPG" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
                 <h3 id="ck2">Ube Dreamcake</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img id="dr" src="./cake/Dream Cake/Ube.jpg" alt="">
+                    <img id="dream" src="./cake/Dream Cake/Ube.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
                 <h3 id="ck2">New York Cheesecake</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img id="dr" src="./cake/Cheese Cake/New York CheeseCake.jpg" alt="">
+                    <img id="dream" src="./cake/Cheese Cake/New York CheeseCake.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="cake">
                 <h3 id="ck2">Oreo CheeseCake</h3>
                 <a class="imageCake" id="gotoCart">
-                    <img id="dr" src="./cake/Cheese Cake/Oreo CheeseCake.jpg" alt="">
+                    <img id="dream" src="./cake/Cheese Cake/Oreo CheeseCake.jpg" alt="">
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
