--- a/cakepage.html
+++ b/cakepage.html
@@ -42,7 +42,7 @@
                 <a id="texts" href="index.html"><h4>HOME</h4></a>
             </li>
             <li >
-                <a id="texts1"><h4 >CUSTOMIZE CAKES</h4></a>
+                <a href="customized.html" id="texts1"><h4 >CUSTOMIZE CAKES</h4></a>
             </li>
         </ul>
         <div class="burger">
@@ -60,7 +60,7 @@
                 <a href="index.html"><h3>HOME</h3></a>
             </li>
             <li class="active" id="hm">
-                <a><h3>CUSTOMIZE CAKES</h3></a>
+                <a href="customized.html"><h3>CUSTOMIZE CAKES</h3></a>
             </li>
             <li class="active">
                 <hr>
