--- a/cart.html
+++ b/cart.html
@@ -21,7 +21,7 @@
                 <a id="texts" href="index.html"><h4 >HOME</h4></a>
             </li>
             <li id="about">
-                <a id="texts1"><h4>CUSTOMIZE CAKES</h4></a>
+                <a href="customized.html" id="texts1"><h4>CUSTOMIZE CAKES</h4></a>
             </li>
             <li>
                 <div class="select">
