--- a/index.html
+++ b/index.html
@@ -109,53 +109,52 @@
         <div  class="products">
             <div class="new">
                 <div class="header">
-                    <h4>What's New</h4>
+                    <a href="customized.html"><h4 id="cstCake">Customized Cakes</h4></a>
                 </div>
-                <img src="./cake/Round Cake/Mango Bravo.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <img src="cakes/Customized/adults/12.jpg" alt="">
+                <p> Customize your own cakes and enjoy</p>
             </div>
             <div class="new">
                 <div class="header">
-                    <h4>Round Cakes</h4>
+                    <a href="cakepage.html"><h4>Round Cakes</h4></a>
                 </div>
-                <img src="./cake/Round Cake/Chocolate.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <img src="/cakes/Round/C1 - CHOCOLATE (1).png" alt="">
+                <p> Casual cake with different flavors and you can have double flavors too</p>
             </div>
             <div class="new">
                 <div class="header">
-                    <h4>Roll Cakes</h4>
+                    <a href="cakepage.html" id="clk"><h4>Roll Cakes</h4></a>
                 </div>
-                <img src="./cake/Roll Cakes/Brazo de Mercedez.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <img src="/cakes/Roll/UBE ROLL.png" alt="">
+                <p>Roll cakes that will fill your day with happiness</p>
             </div>
             <div class="new"">
                 <div class="header">
-                    <h4>Dream Cake and Cheesecakes</h4>
+                    <a href="cakepage.html" id="clk"><h4>Dream Cake and Cheesecakes</h4></a>
                 </div>
                 <a href="">
-                    <img src="./cake/Dream Cake/Mocha.JPG" alt="">
-                    <img src="./cake/Cheese Cake/New York CheeseCake.jpg" class="cheesecake" alt="">   
+                    <img src="/cakes/Dream Cake& Cheescake/C1 - MOCHA DC.jpeg" alt="">
+                    <img src="cakes/Dream Cake& Cheescake/C1 - OREO CHEESECAKE.png" class="cheesecake" alt="">   
                 </a>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <p>Dream cakes and Cheesecake that will bring your dream to reality</p>
             </div>
             <div class="new">
                 <div class="header">
-                    <h4>Cupcakes</h4>
+                    <a href="cakepage.html" id="clk"><h4>Cupcakes</h4></a>
                 </div>
-                <img src="./cake/Cupcake/Coffee.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <img src="cakes/Cupcake/Mocha CP.png" alt="">
+                <p>Cupcakes that will make the kids smile</p>
             </div>
             <div  class="new">
                 <div class="header">
-                    <h4>Sweet Bites
-                    </h4>
+                    <a href="cakepage.html" id="clk"> <h4>Sweet Bites</h4></a>
                 </div>
                 <a href="">
-                    <img src="./cake/Sweet Bites/Silvanas/Coffee.jpg" alt="">
-                    <img src="./cake/Sweet Bites/Doughnuts/Alcapone.jpg" class="cheesecake" alt="">
-                    <img src="./cake/Sweet Bites/Macaroons/Coconut.jpg" class="cheesecake"  alt="">
+                    <img src="/cakes/Sweet Bites/Chocolate Silvanas.jpeg" alt="">
+                    <img src="cakes/Sweet Bites/C1 - ALCAPONE.jpeg" class="cheesecake" alt="">
+                    <img src="cakes/Sweet Bites/C1 - MACAROONS.jpeg" class="cheesecake"  alt="">
                 </a>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <p>Sweet bites for more sweetness to your life</p>
             </div>
             
         </div>
