--- a/cart.html
+++ b/cart.html
@@ -47,6 +47,8 @@
             <div class="order">
                 <h3 id="cakeType2"></h3>
                 <p id="desc">
+                <p id="size"></p>
+                <p id="flavors"></p>
                 </p>
                 <div class="orderForm">
                     <input id="price" type="tel" disabled placeholder="0" value="0">
@@ -67,7 +69,8 @@
     <script src="cart.js">
     </script>
      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+     
+ <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
      <script type="text/javascript">
      (function() {
      emailjs.init("user_bfnLSVrQ3UTjHYW7if9Dq");
