--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
     
         </footer>
     </div>
+    <!-- <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-1546fc2c-b03c-48c6-a830-ed780f83671e"></div> -->
 
     <script src="main.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
