--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
 <body>
     <!-- navigations -->
     <nav id="navbar">
-        <div class="logo">
+        <div class="logo" id="lg">
             <img src="./logo/logo.png" alt="">
             <h1 id="text1">Chosen 1</h1>
         </div>
