--- a/customized.html
+++ b/customized.html
@@ -30,7 +30,7 @@
         <div class="scrollToTop" id="scrtop"></div>
     </div>
     <nav id="navbar">
-        <div  id="logo">
+        <div  id="logo" id="lg">
            <a class="logo" href="index.html">
             <img src="logo/logo.png" alt="">
             <div class="name">
