--- a/customized.html
+++ b/customized.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="customized.css">
     <link rel="stylesheet" href="./fontawesome/css/all.css">
     <link rel="icon" href="logo/logo.png">
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
+
 </head>
 <body>
     <div class="contactus" id="cnt">
@@ -332,7 +332,7 @@
         </footer>
     </div>
     <script src="custom.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
      <script src="https://smtpjs.com/v3/smtp.js">
      </script>
      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
