--- a/cakepage.html
+++ b/cakepage.html
@@ -437,9 +437,9 @@
     <footer id="ft">
         <h1>Chosen 1s Bakeshop</h1>
         <button id="ocakes">Our Cakes</button>
-        <button id="order">Mission&Vision</button>
+        <button id="order">About Us</button>
         <button id="contactus">Contact Us</button>
-        <p>©Copyright <a href="./main.html"> <b>Chosen 1 Bakeshop.</b> </a>All Rights Reserved.</p>
+        <p>©Copyright <a href="./index.html"> <b>Chosen 1 Bakeshop.</b> </a>All Rights Reserved.</p>
     </footer>
 
 
