--- a/aboutus.html
+++ b/aboutus.html
@@ -41,35 +41,40 @@
 
     <div class="section">
         <div class="hd">
-            <h1>Humble Beginnings of Chosen 1 Cakes </h1>
+            <h1>Humble Beginnings of Chosen1 Cakes </h1>
         </div>
 
-        <div class="sub-section">
+        <div class="sub-section" id="pers" >
             <div class="cards">
-                <img src="/Slideshow/8.jpg" alt="">
+                <img src="/Slideshow/aboutus-1.jpg" alt="">
             </div>
             <div class="content">
-                <h1>Title</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla veritatis voluptatum maxime modi ex odit aspernatur rerum quidem iure reprehenderit molestiae eius deleniti dolores voluptate delectus in, perspiciatis earum numquam commodi id iste error accusantium quae? Nostrum repudiandae unde ut!</p>
+                <h1>Our humble beginning…</h1>
+                <p>I have never imagined that my cravings for an Ube Macapuno cake available only back home will become the defining moment for me to verge into the baking industry. The memories of how I have enjoyed the first cake I have made were still fresh in my mind. It was just out of joy and generosity that I have shared the other half of my masterpiece to my general manager turned to be my first customer, Mommy Jen. It was her continuous delight in my newly discovered talent and her word of satisfaction that also contributed for me to take this career seriously. Until the word of mouth from different satisfied customers reaches a lot of co-workers, friends and new referral customers, near and far Lethbridge, that gave me a tremendous passion and happiness to be of better service to them every transactions.</p>
             </div>
         </div>
         <div class="sub-section" >
            
             <div class="content" >
-                <h1>Title</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla veritatis voluptatum maxime modi ex odit aspernatur rerum quidem iure reprehenderit molestiae eius deleniti dolores voluptate delectus in, perspiciatis earum numquam commodi id iste error accusantium quae? Nostrum repudiandae unde ut!</p>
+                <!-- <h1>Title</h1> -->
+            <p id="two">I have also explored the world of baking by working a personalized cake first entrusted to me by Ate Mimi, that I can’t even forget her face of satisfaction when she first laid eyes on my work of art. 
+
+                Now, to further serve and provide my valued, loyal and soon to be customers with utmost professionalism, food safety, unique and extraordinary cakes and customized cakes, I have taken an online learning program course at International Association of Professions Career College as Cake Decorator.</p>
             </div>
             <div class="cards">
-                <img id="right" src="/Slideshow/9.jpg" alt="">
+                <img id="right" src="/Slideshow/aboutus-2.jpg" alt="">
             </div>
         </div>
         <div class="sub-section">
             <div class="cards">
-                <img src="/Slideshow/10.jpg" alt="">
+                <img src="/Slideshow/aboutus-3.jpg" alt="">
             </div>
             <div class="content">
-                <h1>Title</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla veritatis voluptatum maxime modi ex odit aspernatur rerum quidem iure reprehenderit molestiae eius deleniti dolores voluptate delectus in, perspiciatis earum numquam commodi id iste error accusantium quae? Nostrum repudiandae unde ut!</p>
+                <!-- <h1>Title</h1> -->
+                <p id="tree">I have also taken short online courses on Basics of Baking, Basics of Fondant Cake and the Cake Decorating Master Class with Yolanda Gump who is a very well known Cake Artist and one of the forces behind How to Cake-It Academy.
+
+                    My journey is still a long way and I really believe that learning’s and development in this profession are unending, and as part of my Core Values that, “Chosen 1” will be dedicated to continuous improvement and commitment to excellence.
+                    </p>
             </div>
         </div>
         <div class="sub-section" id="foot">
