--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="mySlides fade">
           
-          <img src="Slideshow/2.jpg" style="width:100%">
+          <img src="Slideshow/2.png" style="width:100%">
           
         </div>
         <div class="mySlides fade">
