--- a/aboutus.html
+++ b/aboutus.html
@@ -41,7 +41,7 @@
 
     <div class="section">
         <div class="hd">
-            <h1>Humble Beginnings of Chosen1 Cakes </h1>
+            <h1>Our humble beginnings</h1>
         </div>
 
         <div class="sub-section" id="pers" >
@@ -49,11 +49,11 @@
                 <img src="/Slideshow/aboutus-1.jpg" alt="">
             </div>
             <div class="content">
-                <h1>Our humble beginning…</h1>
+
                 <p>I have never imagined that my cravings for an Ube Macapuno cake available only back home will become the defining moment for me to verge into the baking industry. The memories of how I have enjoyed the first cake I have made were still fresh in my mind. It was just out of joy and generosity that I have shared the other half of my masterpiece to my general manager turned to be my first customer, Mommy Jen. It was her continuous delight in my newly discovered talent and her word of satisfaction that also contributed for me to take this career seriously. Until the word of mouth from different satisfied customers reaches a lot of co-workers, friends and new referral customers, near and far Lethbridge, that gave me a tremendous passion and happiness to be of better service to them every transactions.</p>
             </div>
         </div>
-        <div class="sub-section" >
+        <div class="sub-section" id="second">
            
             <div class="content" >
                 <!-- <h1>Title</h1> -->
