--- a/aboutus.html
+++ b/aboutus.html
@@ -19,7 +19,7 @@
                 <img src="logo/logo.png" alt="">
                 <div class="name">
                     <h1 id="text1">Chosen 1  </h1>
-                    <p class="small">CustomizedCakes</p>
+                    <p class="small">Customized&nbsp;Cakes</p>
                 </div>
             </div>
         </a>
@@ -28,7 +28,7 @@
                     <a id="texts" href="cakepage.html"><h4>OUR CAKES</h4></a>
                 </li>
                 <li >
-                    <div id="texts1"><h4>CUSTOMIZE CAKES</h4></div>
+                    <a href="customized.html" id="texts1"><h4>CUSTOMIZE CAKES</h4></a>
                 </li>
             </ul>
             <div class="burger">
@@ -49,32 +49,43 @@
                 <img src="/Slideshow/aboutus-1.jpg" alt="">
             </div>
             <div class="content">
-
-                <p>I have never imagined that my cravings for an Ube Macapuno cake available only back home will become the defining moment for me to verge into the baking industry. The memories of how I have enjoyed the first cake I have made were still fresh in my mind. It was just out of joy and generosity that I have shared the other half of my masterpiece to my general manager turned to be my first customer, Mommy Jen. It was her continuous delight in my newly discovered talent and her word of satisfaction that also contributed for me to take this career seriously. Until the word of mouth from different satisfied customers reaches a lot of co-workers, friends and new referral customers, near and far Lethbridge, that gave me a tremendous passion and happiness to be of better service to them every transactions.</p>
+                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have never imagined that my cravings for an Ube Macapuno cake available only back home will become the defining moment for me to verge into the baking industry. The memories of how I have enjoyed the first cake I have made were still fresh in my mind. It was just out of joy and generosity that I have shared the other half of my masterpiece to my general manager turned to be my first customer, Mommy Jen. It was her continuous delight in my newly discovered talent and her word of satisfaction that also contributed for me to take this career seriously. Until the word of mouth from different satisfied customers reaches a lot of co-workers, friends and new referral customers, near and far Lethbridge, that gave me a tremendous passion and happiness to be of better service to them every transactions.</p>
             </div>
         </div>
         <div class="sub-section" id="second">
-           
-            <div class="content" >
-                <!-- <h1>Title</h1> -->
-            <p id="two">I have also explored the world of baking by working a personalized cake first entrusted to me by Ate Mimi, that I can’t even forget her face of satisfaction when she first laid eyes on my work of art. 
 
-                Now, to further serve and provide my valued, loyal and soon to be customers with utmost professionalism, food safety, unique and extraordinary cakes and customized cakes, I have taken an online learning program course at International Association of Professions Career College as Cake Decorator.</p>
+            <div class="content">
+                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Until the word of mouth from different satisfied customers reaches a lot of co-workers, friends and new referral customers, near and far Lethbridge, that gave me a tremendous passion and happiness to be of better service to them every transactions.
+                    I have also explored the world of baking by working a personalized cake first entrusted to me by Ate Mimi, that I can’t even forget her face of satisfaction when she first laid eyes on my work of art.
+                 </p>
             </div>
             <div class="cards">
-                <img id="right" src="/Slideshow/aboutus-2.jpg" alt="">
+                <img src="/Slideshow/aboutus-2.jpg" id="right" alt="">
             </div>
         </div>
-        <div class="sub-section">
+        <div class="sub-section" >
             <div class="cards">
-                <img src="/Slideshow/aboutus-3.jpg" alt="">
+                <img  src="/Slideshow/aboutus-3.jpg" alt="">
             </div>
+            <div class="content" >
+                <!-- <h1>Title</h1> -->
+                <p id="two"> 
+
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Now, to further serve and provide my valued, loyal and soon to be customers with utmost professionalism, food safety, unique and extraordinary cakes and customized cakes, I have taken an online learning program course at International Association of Professions Career College as Cake Decorator.I have also taken short online courses on Basics of Baking, Basics of Fondant Cake and the Cake Decorating Master Class with Yolanda Gump who is a very well known Cake Artist and one of the forces behind How to Cake-It Academy.</p>
+            </div>
+
+        </div>
+        <div class="sub-section" >
+
             <div class="content">
                 <!-- <h1>Title</h1> -->
-                <p id="tree">I have also taken short online courses on Basics of Baking, Basics of Fondant Cake and the Cake Decorating Master Class with Yolanda Gump who is a very well known Cake Artist and one of the forces behind How to Cake-It Academy.
+                <p id="tree">
 
-                    My journey is still a long way and I really believe that learning’s and development in this profession are unending, and as part of my Core Values that, “Chosen 1” will be dedicated to continuous improvement and commitment to excellence.
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My journey is still a long way and I really believe that learning’s and development in this profession are unending, and as part of my Core Values that, “Chosen 1” will be dedicated to continuous improvement and commitment to excellence.
                     </p>
+            </div>
+            <div class="cards">
+                <img src="/Slideshow/aboutus-4.jpg" id="right" alt="">
             </div>
         </div>
         <div class="sub-section" id="foot">
