--- a/aboutus.html
+++ b/aboutus.html
@@ -19,7 +19,7 @@
                 <img src="logo/logo.png" alt="">
                 <div class="name">
                     <h1 id="text1">Chosen 1  </h1>
-                    <p class="small">Customized&nbsp;Cakes</p>
+                    <p class="small">Customized Cakes</p>
                 </div>
             </div>
         </a>
