--- a/index.html
+++ b/index.html
@@ -120,9 +120,11 @@
         <div  class="products">
             <div class="new">
                 <div class="header">
-                    <a href="customized.html"><h4 id="cstCake">Customized Cakes</h4></a>
+                   <h4 id="cstCake">Customized Cakes</h4>
                 </div>
-                <img src="cakes/Customized/adults/12.jpg" alt="">
+                <a href="customized.html">
+                    <img src="cakes/Customized/adults/12.jpg" alt="">
+                </a>
                 <p> Customize your own cakes and enjoy</p>
             </div>
             <div class="new">
