--- a/cakepage.html
+++ b/cakepage.html
@@ -462,6 +462,6 @@
      <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
      <!-- <script src="sweetalert2/dist/sweetalert2.min.js"></script> -->
      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    
+     <script src="dualpage.js"></script>
 </body>
 </html>
