--- a/index.html
+++ b/index.html
@@ -198,6 +198,6 @@
     <script src="//cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>   
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
+    <script src="dualpage.js"></script>
 </body>
 </html>
